fix z index overlap problem

--- a/client/src/styles/PropertiesMap.scss
+++ b/client/src/styles/PropertiesMap.scss
@@ -42,7 +42,7 @@
 
     .warning-banner {
       position: absolute;
-      z-index: 1000;
+      z-index: 100;
       top: 0;
       margin: 1rem 1.1rem 0 4.5rem;
       background-color: $wowza-orange;
